--- a/src/app/components/notebook/notebook.css
+++ b/src/app/components/notebook/notebook.css
@@ -145,6 +145,8 @@ button.active {
   overflow: auto;
   background-color: #d0d0d0;
   position: relative;
+  overscroll-behavior: none;
+  -webkit-overflow-scrolling: touch; /* Suaviza el scroll manual en iOS */
 }
 
 .paper-sheet {
@@ -177,9 +179,10 @@ button.active {
   display: block;
   background-color: transparent !important;
   cursor: crosshair;
-  touch-action: none !important; 
+  touch-action: none !important;
   -webkit-user-select: none;
   user-select: none;
   -webkit-touch-callout: none;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  overscroll-behavior: none;
 }
